fix: align image card with detroit updates

--- a/src/blocks/ImageCard.scss
+++ b/src/blocks/ImageCard.scss
@@ -1,4 +1,5 @@
 @import "../global/mixins.scss";
+@import "../global/accessibility.scss";
 
 .image-card {
   /* Component Variables */
@@ -17,6 +18,11 @@
   position: relative;
   background-color: var(--default-background-color);
   border-radius: var(--border-radius);
+
+  button:focus {
+    outline: none;
+    box-shadow: 0 0 3px 4px var(--bloom-color-accent-cool);
+  }
 
   img {
     border-radius: var(--border-radius);
@@ -98,9 +104,10 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-
+      color: var(--bloom-color-white);
+      background: rgba(0, 0, 0, 0.6);
       @media (max-width: $screen-sm) {
-        font-size: var(--bloom-font-size-xs);
+        font-size: var(--bloom-font-size-sm);
         line-height: var(--bloom-line-height-none);
       }
     }
@@ -119,6 +126,7 @@
   justify-content: var(--tags-justify);
   position: absolute;
   top: 0;
+  z-index: 10;
   width: 100%;
   margin-block-start: var(--bloom-s1);
   padding-inline: var(--bloom-s4);
@@ -157,4 +165,22 @@
   --footer-justify: center;
   --modal-border: none;
   --modal-shadow: none;
+  @media (min-width: $screen-md) {
+    --scroll-max-height: calc(80vh - 200px);
+    max-width: var(--bloom-width-5xl);
+  }
+  section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  button {
+    outline: none;
+  }
+  svg {
+    @extend .sr-only;
+  }
+  footer button:focus {
+    box-shadow: 0 0 3px 4px var(--bloom-color-accent-cool);
+  }
 }
